<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="revenue_and_expenditure">Revenue and Expenditure</string>
    <string name="RevExp_Name">Name</string>
    <string name="RevExp_Amount">Amount in €</string>
    <string name="radioEarning">Income</string>
    <string name="radioSpending">Expenditure</string>
    <string name="Save">Save</string>
    <string name="app_name">Plain Planr</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Klick auf die Münze</string>
    <string name="balance_text_title">Bilanz</string>
    <string name="balance_value">0</string>
    <string name="currentdate_text">16.12.2014</string>
    <string name="text_title_balance_green">Einnahmen</string>
    <string name="text_title_balance_red">Ausgaben</string>
    <string name="text_balance_result">Saldo:</string>
    <string name="Popup_income_button">Submit</string>
    <string name="popup_income_date">Date:</string>
    <string name="popup_income_amount">Amount:</string>
    <string name="popup_income_name">Name:</string>
    <string name="popup_income_title">Your Position:</string>
    <string name="Popup_expend_button">Submit</string>
    <string name="popup_expend_name">Ausgabe</string>
    <string name="popup_expend_amount">Betrag</string>
    <string name="popup_expend_date">Datum</string>
    <string name="Popup_saving_button">Submit</string>
    <string name="popup_saving_date">Zieldatum</string>
    <string name="popup_saving_amount">Betrag</string>
    <string name="popup_saving_name">Wunschziel</string>
    <string name="popup_saving_title">Wunschplaner</string>
    <string name="popup_expend_title">Ausgabe</string>
    <string name="Popup_debts_button">Submit</string>
    <string name="popup_debts_date">Datum</string>
    <string name="popup_debts_amount">Betrag</string>
    <string name="popup_debts_name">Person</string>
    <string name="popup_debts_title">Schulden</string>
    <string name="Popup_credits_button">Submit</string>
    <string name="popup_credits_date">Datum</string>
    <string name="popup_credits_amount">Betrag</string>
    <string name="popup_credits_name">Person</string>
    <string name="popup_credits_title">Gutschrift</string>
    <string name="action_main">Hauptmenü</string>
    <string name="action_exit">Exit</string>
    <string name="action_balance">Bilanz</string>
    <string name="action_dreamlist">Wunschziele</string>
    <string name="action_debtscredits">Schulden und Gutschrift</string>
    <string name="action_help">Hilfe</string>
    <string name="screenBalance">BalanceScreen</string>
    <string name="action_incomeexpend">Monatliche Ein und Ausgänge</string>
    <string name="screenDebtsCredits">SchuldenundGutschrift</string>
    <string name="screenDreamlist">Wunschziele</string>
    <string name="screenIncomeExpend">EinnahmenundAusgaben</string>
    <string name="dreamgoal_text_title">Wunschliste</string>
    <string name="text_dreamgoal_list_amount">Gesamtsumme:</string>
    <string name="alert_namehint_credit">Name</string>
    <string name="alert_amounthint_credit">Betrag</string>
    <string name="alert_datehint_credit">Datum</string>
    <string name="Popup_expend_button_dimiss">Dimiss</string>
    <string name="Popup_saving_button_dimiss">Dimiss</string>
    <string name="Popup_income_button_dimiss">Dimiss</string>
    <string name="Popup_debts_button_dimiss">Dimiss</string>
    <string name="Popup_credits_button_dimiss">Dimiss</string>
    <string name="report_text_title">Monthly Report</string>
    <string name="text_report_perexpense">Periodische Ausgaben</string>
    <string name="text_report_perincome">Periodische Einnahmen</string>
    <string name="text_report_expense">Ausgaben</string>
    <string name="text_report_income">Einnahmen</string>
    <string name="text_report_result">SALDO</string>
    <string name="text_report_dreamgoal">Sparziel</string>
    <string name="text_report_dreamgoal_months">Monate zu sparen</string>
    <string name="expense_text_title">Ausgaben</string>
    <string name="text_expense_list_amount">Gesamtausgaben</string>
    <string name="income_text_title">Einnahmen</string>
    <string name="text_income_list_amount">Gesamteinnahmen</string>
    <string name="pincome_text_title">Monatliche Einkommen</string>
    <string name="text_pincome_list_amount">Gesamt Einkommen</string>
    <string name="pexpense_text_title">Monatliche Ausgaben</string>
    <string name="text_pexpense_list_amount">Gesamte Ausgaben</string>
    <string name="credits_text_title">Gutschriften</string>
    <string name="text_credits_list_amount">Gesamt Gutschriften</string>
    <string name="debts_text_title">Schulden</string>
    <string name="text_debts_list_amount">Gesamt Schulden</string>
    <string name="screenExpends">Ausgaben</string>
    <string name="screenIncome">Einnahmen</string>
    <string name="screenCredits">Gutschriften</string>
    <string name="screenDebts">Schulden</string>
    <string name="screenPExpends">Monatliche Ausgaben</string>
    <string name="screenPIncome">Monatliche Einnahmen</string>
    <string name="action_report">Report</string>
    <string name="action_debts">Schulden</string>
    <string name="action_credits">Gutschriften</string>
    <string name="action_pincome">Monatliche Einnahmen</string>
    <string name="action_pexpends">Monatliche Ausgaben</string>
    <string name="action_income">Einnahmen</string>
    <string name="action_expends">Ausgaben</string>

</resources>