<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    >

    <TextView
        android:text="@string/revenue_and_expenditure"
        android:id="@+id/textView2"
        style="@style/EaS1" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eaSName"
        android:text="@string/RevExp_Name"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/easAmount"
        android:layout_weight="0.12"
        android:text="@string/RevExp_Amount"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioEarning"
            android:id="@+id/radioEarning"
            android:layout_gravity="left|center_horizontal"
            android:checked="true"
            android:layout_marginTop="30dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioSpending"
            android:id="@+id/radioSpending"
            android:layout_gravity="left|center_horizontal"
            android:layout_marginTop="15dp" />
    </RadioGroup>

    <Button
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:onClick="ButtonClick"/>

</LinearLayout>