<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/balance_text_title"
        android:id="@+id/text_balance"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:paddingTop="12dp"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentdate_text"
        android:id="@+id/text_date_balance"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:paddingTop="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_title_balance_green"
        android:id="@+id/income"
        android:layout_toStartOf="@+id/text_balance"
        android:layout_marginTop="27dp"
        android:textSize="20sp"
        android:textColor="#ff0dff9e"
        android:layout_below="@+id/balance_value"
        android:layout_toLeftOf="@+id/text_balance" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_title_balance_red"
        android:id="@+id/expenditure"
        android:textSize="20sp"
        android:textColor="#ffff4163"
        android:layout_alignTop="@+id/income"
        android:layout_alignRight="@+id/balance_value"
        android:layout_alignEnd="@+id/balance_value" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_balance_result"
        android:id="@+id/text_balance_value_name"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/text_balance"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:ems="10"
        android:id="@+id/balance_value"


        android:layout_alignTop="@+id/text_balance_value_name"
        android:layout_toRightOf="@+id/text_balance_value_name"
        android:layout_toEndOf="@+id/text_balance_value_name"
        android:layout_marginLeft="39dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/income"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/listView"
            android:layout_weight="1" />

        <ListView
            android:layout_width="169dp"
            android:layout_height="match_parent"
            android:id="@+id/expendList" />
    </LinearLayout>



</RelativeLayout>
