<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/customborder"


    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:orientation="vertical"


        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/popup_income_title"
                android:textSize="30dp"
                android:layout_marginTop="20dp"
                />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popup_income_name"
                    android:textSize="20dp"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_popup_name_income"
                    android:hint="Gutschein von Peter"
                    android:layout_marginLeft="5dp"
                    android:singleLine="true"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popup_income_amount"
                    android:inputType="number"
                    android:textSize="20dp"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_popup_income_amount"
                    android:hint="200,50€"
                    android:layout_marginLeft="5dp"
                    android:singleLine="true"
                    android:inputType="numberDecimal"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popup_income_date"
                    android:textSize="20dp"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_popup_income_date"
                    android:hint="20.11.14"
                    android:layout_marginLeft="5dp"
                    android:focusable="false"
                    android:singleLine="true"
                    />

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/Popup_income_button"
                android:id="@+id/popup_income_submit"
                />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/Popup_income_button_dimiss"
                android:id="@+id/popup_income_dimiss"
                />

            ></LinearLayout>


    </LinearLayout>
</LinearLayout>

