<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/customborder"


    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/popup_debts_title"
                android:textSize="40dp"
                android:layout_marginTop="20dp"
                android:textColor="#ffe78914"

                />
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popup_debts_name"
                    android:textSize="25dp"
                    android:textColor="#ff000000"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_popup_name_debts"
                    android:hint="Tobias"
                    android:layout_marginLeft="5dp"
                    android:singleLine="true"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popup_debts_amount"
                    android:textSize="25dp"
                    android:textColor="#ff000000"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_popup_debts_amount"
                    android:hint="200,50€"
                    android:inputType="numberDecimal"
                    android:layout_marginLeft="10dp"
                    android:singleLine="true"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/popup_debts_date"
                    android:textSize="25dp"
                    android:textColor="#ff000000"/>

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editText_popup_debts_date"
                    android:hint="20.11.14"
                    android:layout_marginLeft="10dp"
                    android:focusable="false"
                    android:singleLine="true"
                    />

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/Popup_debts_button"
                android:id="@+id/popup_debts_submit"
                android:background="@drawable/custombutton1"
                />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/Popup_debts_button_dimiss"
                android:id="@+id/popup_debts_dimiss"
                android:background="@drawable/custombutton2"
                />

            ></LinearLayout>


    </LinearLayout>
</LinearLayout>

