<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/ppbackground2"
    >



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/expense_text_title"
        android:id="@+id/text_expense"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:paddingTop="12dp"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentdate_text"
        android:id="@+id/text_date_expense"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:paddingTop="12dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_expense_list_amount"
        android:id="@+id/text_expense_list_total"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:layout_below="@+id/text_expense"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />



    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@android:id/list"
        android:layout_below="@+id/text_expense_list_total"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:drawSelectorOnTop="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="2000000€"
        android:textSize="25sp"
        android:id="@+id/editText_expend_amount"
        android:layout_alignTop="@+id/text_expense_list_total"
        android:layout_alignRight="@android:id/list"
        android:layout_alignEnd="@android:id/list"
        android:layout_marginRight="33dp" />



</RelativeLayout>
